--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@
             <option value="io19">#io19</option>
             <option value="flutter-interact-19">Flutter Interact 2019</option>
             <option value="angular-material">Angular Material</option>
+            <option value="nord-dark">Nord Dark</option>
+            <option value="nord-light">Nord Light</option>
             <option value="custom">Custom</option>
           </select>
         </div>
