feat(theme): City Lights

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
             <option value="angular-material">Angular Material</option>
             <option value="nord-dark">Nord Dark</option>
             <option value="nord-light">Nord Light</option>
+            <option value="city-lights">City Lights</option>
             <option value="custom">Custom</option>
           </select>
         </div>
